# chez-therese-denise

./: .env.example  .gitignore  HANDOFF.md  Makefile  PROJECT_STATE.md  README.md  docker-compose.yml  package.json
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  security.py
apps/api/app/models/: schemas.py
apps/api/app/routers/: analytics.py  auth.py  dashboard.py  deps.py  integrations.py  inventory.py  invoices.py  orders.py  planning.py  production.py  quality.py  realtime.py  recipes.py  settings.py  suppliers.py  team.py  time_clock.py
apps/api/app/services/: allergens.py  audit.py  company_settings.py  insights.py  integrations.py  ocr.py  pricing.py  produce_weights.py  seed.py  stock.py  timezone.py
apps/api/tests/: test_health.py  test_invoice_ocr_openai.py
apps/web/: Dockerfile  next-env.d.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/ai/: page.tsx
apps/web/app/allergens/: page.tsx
apps/web/app/analytics/: analytics-client.tsx  page.tsx
apps/web/app/api-console/: page.tsx
apps/web/app/audit/: page.tsx
apps/web/app/costs/: page.tsx
apps/web/app/dashboard/: dashboard-client.tsx  page.tsx
apps/web/app/haccp/: haccp-client.tsx  page.tsx
apps/web/app/history/: page.tsx
apps/web/app/inventory/: inventory-client.tsx  page.tsx
apps/web/app/invoices/: invoices-client.tsx  page.tsx
apps/web/app/labels/: labels-client.tsx  page.tsx
apps/web/lib/: api.ts  modules.ts  time.ts
apps/web/public/: manifest.json  manifest.webmanifest
(+34 files in other folders)
